--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="rating-page">
-    <img src="./images/icon-star.svg">
+    <img src="icon-star.svg">
     <h2>How did we do?</h2>
     <p>
       Please let us know how we did with your support request. All feedback is appreciated 
@@ -32,7 +32,7 @@
     
   </div>
   <div class="thanks-page hide">
-    <img src="./images/illustration-thank-you.svg" alt="">
+    <img src="illustration-thank-you.svg" alt="">
     <div id="selected">You selected  4 </span> out of 5</div>
 
     <h2>Thank you!</h2>
